Add Custom Spliterator along with the record preview feautre of java 14